--- a/styles/style.css
+++ b/styles/style.css
@@ -1,62 +1,76 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("fonts.css");
+@import url("variables.css");
+@import url("utiity.css");
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: lightcyan;
-    gap: 35px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight:lighter;
-    margin: 11rem;
-    overflow: hidden;
+body {
+  font-family: var(--mono), monospace;
+  min-height: 100vh;
+  min-width: 100vw;
+  background: var(--tints);
+  color: var(--shades);
+}
+input,
+button {
+  font-family: inherit;
+}
 
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
-.heading{
-    font-weight: lighter;
-    font-size: 50px;
-    word-spacing: 20px;
-    
+.heading::after {
+  content: "";
+  background-image: url("/assets/image/external-Reverse-round-mobile-ui-set-flat-icons-inmotus-design.png");
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+.description {
+  font-size: 0.8rem;
+}
 
+.aside {
+  display: flex;
+  gap: 1rem;
 }
-.description{
-    font-size: 20px;
+.input-text {
+  padding: 1rem;
+  border-radius: 1rem;
+  font-size: 1rem;
+  border: none;
+  outline: 1px dashed black;
 }
-.input-text{
-    position: relative;
-    margin-right: 90px;
-    height: 90px;
-    width: 23rem;
-    border-radius: 50px;
-    border: 3px dotted black;
-    font-size: 25px;
-    padding: 20px;
+.btn-reverse {
+  cursor: pointer;
+  padding: 1rem;
+  border-radius: 50%;
+  border: none;
+  display: grid;
+  place-items: center;
 }
-.btn-reverse{
-    height: 90px;
-    width: 100px;
-    position: absolute;
-    bottom: 41%;
-    right:33%;
-    border-radius: 50%;
-    border: 1px solid black;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    cursor: pointer;
+.theme {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
 }
 .chip{
-    padding-right: 10%;
+  color: var(--accent);
+  visibility: hidden;
 }
-.theme{
-    margin-left: 120%;
-    margin-top: 10%;
-    position: sticky;
-}
-.color{
-    color:fuchsia;
+.show{
+  visibility: visible;
 }
